Cambio nombre y menu cancun

--- a/conferences.html
+++ b/conferences.html
@@ -80,6 +80,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html">Maps</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://www.visitmexico.com/es/destinos-principales/quintana-roo/cancun">Cancún | Visit México</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -191,8 +194,8 @@
               <img class="img-fluid" src="img/conferences/3.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4>SIMO ASH</h4>
-              <p class="text-muted">ALEMANIA</p>
+              <h4>SIMON ASH</h4>
+              <p class="text-muted">ISRAEL</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
@@ -211,6 +214,24 @@
             <div class="theaters-caption">
               <h4>ME HAMZEH FRITEKH</h4>
               <p class="text-muted">PALESTINE</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/conferences/17.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>MUSTI TOPAL</h4>
+              <p class="text-muted">TRKEY</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/conferences/18.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>SAMER MHJAZI</h4>
+              <p class="text-muted">SYRIA</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
