--- a/theaters.html
+++ b/theaters.html
@@ -80,6 +80,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html">Maps</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://www.visitmexico.com/es/destinos-principales/quintana-roo/cancun">Cancún | Visit México</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -119,7 +122,7 @@
               <img class="img-fluid" src="img/theaters/6.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4>JOHN SMITM</h4>
+              <h4>JOHN SMITH</h4>
               <p class="text-muted">LONDRES</p>
             </div>
           </div>
@@ -128,8 +131,8 @@
               <img class="img-fluid" src="img/theaters/15.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4>KULIRDV VIACHESLAV</h4>
-              <p class="text-muted">ITALIA</p>
+              <h4>VIACHESIAV KULIKOV</h4>
+              <p class="text-muted">ITALY</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
@@ -146,7 +149,7 @@
               <img class="img-fluid" src="img/theaters/2.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4>MOZARI AMADEUS</h4>
+              <h4>MOZART AMADEUS</h4>
               <p class="text-muted">ALEMANIA</p>
             </div>
           </div>
@@ -155,7 +158,7 @@
               <img class="img-fluid" src="img/theaters/10.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4>NI MOLCHO Y ANNE NEF</h4>
+              <h4>NIR MOLCHO AND ANNE NEF</h4>
               <p class="text-muted">SUIZA</p>
             </div>
           </div>
@@ -174,9 +177,8 @@
               <img class="img-fluid" src="img/theaters/11.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4>PINA PIAZZA, RENATA SCILIO, TAEIANA
-                TERRIBLLE y ENZO CANNATE</h4>
-              <p class="text-muted">ITALIA</p>
+              <h4>PINA PIAZZA , RENATA SCILIO, FRANCESCA SCHMIDT,ROSARIO ANASTASIO</h4>
+              <p class="text-muted">ITALY</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
@@ -184,7 +186,7 @@
               <img class="img-fluid" src="img/theaters/12.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4>RALF GADRBAVER</h4>
+              <h4>RALF GADEBAUR</h4>
               <p class="text-muted">ALEMANIA</p>
             </div>
           </div>
@@ -204,6 +206,15 @@
             <div class="theaters-caption">
               <h4>Vincent Deboudt</h4>
               <p class="text-muted">FRANCE</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/16.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>ISRAEL TAFOYA CONDE</h4>
+              <p class="text-muted">MEXICO</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
