--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#maps">Maps</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://www.visitmexico.com/es/destinos-principales/quintana-roo/cancun">Cancún | Visit México</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -171,7 +174,7 @@
               <img class="img-fluid" src="img/conferences/15.png" alt="">
             </a>
             <div class="conference-caption">
-              <h4>DAVID NIEBREDING</h4>
+              <h4>DAVID NIEBERDING AND JAMILA BEN</h4>
               <p class="text-muted">BRUSELAS</p>
             </div>
           </div>
@@ -205,7 +208,7 @@
             <img class="img-fluid" src="img/dj/1.png" alt="">
           </a>
           <div class="conference-caption">
-            <h4>NICO DIMARCO</h4>
+            <h4>LOOKS NICE</h4>
             <p class="text-muted">USA</p>
           </div>
         </div>
