--- a/team.html
+++ b/team.html
@@ -80,6 +80,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html">Maps</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://www.visitmexico.com/es/destinos-principales/quintana-roo/cancun">Cancún | Visit México</a>
+          </li>
         </ul>
       </div>
     </div>
