--- a/theaters.html
+++ b/theaters.html
@@ -105,7 +105,7 @@
             </a>
             <div class="theaters-caption">
               <h4>ERNESTO Y LETICIA</h4>
-              <p class="text-muted"><EUA/p>
+              <p class="text-muted">USA</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
