--- a/conferences.html
+++ b/conferences.html
@@ -88,20 +88,20 @@
     </div>
   </nav>
 
-
+            <div class="fondo">
 
   <!-- theaters -->
-  <section class="bg-light page-section" id="theaters">
+  <section class="page-section" id="theaters">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Confereces</h2>
           </div>
         </div>
-       <div class="row">
+       <div class="row jefe">
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal1">
-              <img class="img-fluid" src="img/conferences/6.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/6.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>PIETRO SEMERARO</h4>
@@ -110,7 +110,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal2">
-              <img class="img-fluid" src="img/conferences/4.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/4.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>REINER MERTZ Y MAGDALENE GSRM</h4>
@@ -119,7 +119,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/11.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/11.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>HICHAM ISSAM</h4>
@@ -128,7 +128,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/2.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/2.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>YARE PÉREZ</h4>
@@ -137,7 +137,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/7.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/7.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>PAUL DANIEL CRIPPS</h4>
@@ -146,7 +146,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/13.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/13.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>CECILIA BELLO</h4>
@@ -155,7 +155,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/16.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/16.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>CREUZ DEL SILENCIO</h4>
@@ -164,7 +164,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/10.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/10.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>JORGE BASSIO</h4>
@@ -173,7 +173,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/12.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/12.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>CLIVE JOHN YOUG</h4>
@@ -182,7 +182,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/1.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/1.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>TALIA KAREN BOSSIO</h4>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/3.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/3.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>SIMON ASH</h4>
@@ -200,7 +200,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/8.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/8.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>MELISSA ELMIRA YINGST</h4>
@@ -209,28 +209,20 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/9.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/conferences/9.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>ME HAMZEH FRITEKH</h4>
               <p class="text-muted">PALESTINE</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/17.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>MUSTI TOPAL</h4>
-              <p class="text-muted">TRKEY</p>
-            </div>
-          </div>
+          
           </div>
           </div>
         </div> 
       </div>
     </section>  
-
+         </div>
 
 
   <!-- Footer -->
@@ -238,7 +230,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">DeafTech 2019</span>
+          <span class="copyright">DeafTech 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
