--- a/theaters.html
+++ b/theaters.html
@@ -88,20 +88,20 @@
     </div>
   </nav>
 
-
+        <div class="fondo">
 
   <!-- theaters -->
-  <section class="bg-light page-section" id="theaters">
+  <section class="page-section" id="theaters">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">THEATERS</h2>
           </div>
         </div>
-       <div class="row">
+       <div class="row jefe">
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal1">
-              <img class="img-fluid" src="img/theaters/8.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/8.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>ERNESTO Y LETICIA</h4>
@@ -110,7 +110,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal2">
-              <img class="img-fluid" src="img/theaters/14.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/14.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>JAVIER</h4>
@@ -119,7 +119,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/6.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/6.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>JOHN SMITH</h4>
@@ -128,7 +128,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/15.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/15.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>VIACHESIAV KULIKOV</h4>
@@ -137,7 +137,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/5.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/5.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>EDDY LOCO</h4>
@@ -146,7 +146,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/2.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/2.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>MOZART AMADEUS</h4>
@@ -155,7 +155,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/10.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/10.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>NIR MOLCHO AND ANNE NEF</h4>
@@ -164,7 +164,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/13.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/13.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>PETER ENESCU, ANA ENESCU y STEFAN
@@ -174,7 +174,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/11.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/11.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>PINA PIAZZA , RENATA SCILIO, FRANCESCA SCHMIDT,ROSARIO ANASTASIO</h4>
@@ -183,7 +183,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/12.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/12.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>RALF GADEBAUR</h4>
@@ -192,7 +192,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/9.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/9.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>RODY YAHYA</h4>
@@ -201,7 +201,7 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/7.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/7.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>Vincent Deboudt</h4>
@@ -210,18 +210,44 @@
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/theaters/16.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/theaters/16.png" alt="">
             </a>
             <div class="theaters-caption">
               <h4>ISRAEL TAFOYA CONDE</h4>
               <p class="text-muted">MEXICO</p>
             </div>
           </div>
+               <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="mx-auto rounded-circle" src="img/theaters/17.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>DANNY MURPHY</h4>
+              <p class="text-muted">FRANCE</p>
+            </div>
+          </div>
+               <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="mx-auto rounded-circle" src="img/theaters/18.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>FRANCIS Y DANIELA</h4>
+              <p class="text-muted">ESPAÑA</p>
+            </div>
+          </div>
+               <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="mx-auto rounded-circle" src="img/theaters/19.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>SCARTATO EUGENIO</h4>
+              <p class="text-muted">ITALY</p>
+            </div>
           </div>
         </div> 
       </div>
     </section>  
-
+    </div>
 
 
   <!-- Footer -->
@@ -229,7 +255,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">DeafTech 2019</span>
+          <span class="copyright">DeafTech 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
